--- a/web/src/assets/index.css
+++ b/web/src/assets/index.css
@@ -1,5 +1,7 @@
 html {
   margin: 0 auto;
+  max-width: 900px;
+  padding: 20px 0;
 }
 
 body {
@@ -9,27 +11,21 @@ body {
   text-align: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 
 h1 { 
-  font-size: 2em;
-}
-
-h2 { 
   font-size: 1.5em;
 }
 
-h3 { 
+h2 { 
   font-size: 1.17em;
 }
 
-h4 { 
+h3 { 
   font-size: 1em;
 }
 
-h5 { 
+h4 { 
   font-size: .83em;
 }
 
@@ -43,32 +39,12 @@ table, tr, td {
 
 .container { 
   margin-top: 20px;
-  max-width: 960px;
 }
 
 .card { 
-  border: none;
   background: #393F4D;
-  border-radius: 1rem;
-  transition: all 0.2s;
-  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
-}
-
-.card-title {
-  letter-spacing: .1rem;
-  font-weight: bold;
-}
-
-.card-price {
-  font-size: 1.5rem;
-}
-
-.period {
-  font-size: 1rem;
-}
-
-.card-icon { 
-  font-size: 1.5em;
+  border: 1px solid #1D1E22;
+  padding: 5px;
 }
 
 /* 
